# rust-via-desugarings

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  book.toml  build.rs  flake.nix  rust-toolchain
.github/workflows/: deploy.yml
book/: book.toml  language-features.md
book/features/: extended-let-chains.md  let-place.md  unchecked-indexing.md
book/pipeline/: autoderef.md  bound-checks.md  by-value-bindings.md  coroutine.md  let-chains.md  match-desugaring.md  match-ergonomics.md  patterns.md  subexpr-elim.md  value-to-place.md
book/src/: SUMMARY.md
cargo-desugar/: Cargo.toml
cargo-desugar/src/: desugar.rs  lib.rs  options.rs  print.rs  util.rs
cargo-desugar/src/desugar/: mod.rs  temporaries.rs
cargo-desugar/src/print/: mod.rs  thir.rs
cargo-desugar/tests/: failing-due-to-attrs  failing-due-to-fmt-internals  failing-due-to-impl-trait  rustc.rs  ui.rs
cargo-desugar/tests/ui/: braces-in-match-scrutinee.desugared.rs  braces-in-match-scrutinee.out  braces-in-match-scrutinee.rs  extern-safety.desugared.rs  extern-safety.out  extern-safety.rs  format-borrow.desugared.rs  format-borrow.out  format-borrow.rs  impl-trait-arg.desugared.rs  impl-trait-arg.out  impl-trait-arg.rs  inherent-assoc-const.desugared.rs  inherent-assoc-const.out  inherent-assoc-const.rs  local-type-path.desugared.rs  local-type-path.out  local-type-path.rs  min_specialization.desugared.rs  min_specialization.out  min_specialization.rs  packed-struct.desugared.rs  packed-struct.out  packed-struct.rs  panic-internals.desugared.rs  panic-internals.out  panic-internals.rs  pat-param.desugared.rs  pat-param.out  pat-param.rs  self-arg.desugared.rs  self-arg.out  self-arg.rs  temporary-lifetime-extension.desugared.rs  temporary-lifetime-extension.out  temporary-lifetime-extension.rs
cargo-desugar/tests/util/: mod.rs
scripts/: run_rustc_tests.sh
src/: .gitignore  SUMMARY.md  book.toml  desugar.rs  introduction.md  language-features.md  lib.rs  main.rs  worked-examples.md
src/book/: SUMMARY.md  introduction.md  language-features.md
src/desugar/: mod.rs
src/features/: auto-drop.md  enum-discriminant.md  enum-projections.md  explicit-copy-move.md  extended-let-chains.md  hygiene-markers.md  if-let-guards.md  let-place.md  move-expressions.md  moving-out-of-mut.md  non-dropping-assignment.md  on-unwind.md  phased-initialization.md  return-place.md  scope-end.md  unchecked-indexing.md  uniq-borrow.md
src/pipeline/: autoderef.md  boolean-operators.md  borrow-checking.md  bound-checks.md  by-value-bindings.md  closure-adt.md  closure-capture.md  closures.md  coercions.md  control-flow.md  copy-move.md  coroutine.md  desugaring-bindings.md  drop-elaboration.md  everything-is-match.md  explicit-drop.md  explicit-ownership.md  explicit-places.md  explicit-unwind.md  expr-transforms.md  final-desugarings.md  final-language.md  fru.md  guard-bindings.md  let-chains.md  let-place-desugaring.md  loop-desugaring.md  match-bindings.md  match-desugaring.md  match-ergonomics.md  method-resolution.md  minirust.md  name-resolution-macro-expansion.md  or-patterns.md  overflow-checks.md  overview.md  pattern-unnesting.md  patterns.md  phased-initialization.md  remove-tail-exprs.md  (+6 more)
src/preprocessors/: literate_rust.py
src/print/: mod.rs  thir.rs  types.rs
src/worked-examples/: pattern-match.md
tests/: ui.rs
tests/ui/: bad_literal.desugared.rs  bad_literal.rs  bad_literal.stderr  block_statements.desugared.rs  block_statements.rs  bool_fn.desugared.rs  borrow_check_failure.desugared.rs  borrow_check_failure.rs  borrow_check_failure.stderr  borrow_expr.desugared.rs  borrow_expr.rs  borrow_mut_run.desugared.rs  borrow_mut_run.rs  const_unsafe.desugared.rs  const_unsafe.rs  deref_expr.desugared.rs  deref_expr.rs  extern_abi.desugared.rs  extern_abi.rs  function_call_mut_run.desugared.rs  function_call_mut_run.rs  grouped_expr.desugared.rs  grouped_expr.rs  if_expr.desugared.rs  if_expr.rs  if_expr_run.desugared.rs  if_expr_run.rs  labeled_block.desugared.rs  labeled_block.rs  let_initializer_run.desugared.rs  let_initializer_run.rs  nested-block-exprs.desugared.rs  nested-block-exprs.rs  nested-function.desugared.rs  nested-function.rs  observable.desugared.rs  observable.rs  path_expr.desugared.rs  (+24 more)
tools/: README.md
tools/mdbook-spec/: Cargo.toml  README.md
tools/mdbook-spec/src/: lib.rs  literate_rust.rs  main.rs
(+111 files in other folders)
