[workspace]
resolver = "3"
members = []

[package]
name = "rust-via-desugarings"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_via_desugarings"
path = "src/lib.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[dependencies]
itertools = "0.14.0"
lalrpop-util = { version = "0.22", features = ["lexer"] }
prettyplease = "0.2"
syn = { version = "2", features = ["parsing"] }

[build-dependencies]
lalrpop = "0.22"
walkdir = "2.5.0"

[dev-dependencies]
libtest-mimic = "0.8.2"
walkdir = "2.5.0"

[package.metadata.rust-analyzer]
rustc_private = true
