[workspace]
resolver = "3"
members = [
    "tools/*"
]

[package]
name = "rust-via-desugarings"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_via_desugarings"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[dependencies]
derive_generic_visitor = "1.0.1"
inventory = "0.3.24"
itertools = "0.14.0"
logos = "0.16.1"
rusty_lr = { git = "https://github.com/Nadrieril/RustyLR" }
syn = { version = "2", features = ["parsing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
formality-rust = { path = "a-mir-formality/crates/formality-rust" }
minirust-rs = { path = "a-mir-formality/crates/minirust-rs" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.106"

[build-dependencies]
grammar = { path = "tools/grammar" }
rusty_lr = { git = "https://github.com/Nadrieril/RustyLR", features = ["build"] }
walkdir = "2.5.0"

[dev-dependencies]
libtest-mimic = "0.8.2"
walkdir = "2.5.0"

[package.metadata.rust-analyzer]
rustc_private = true
