[package]
name = "cargo-desugar"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_via_desugarings"
path = "src/lib.rs"

[[bin]]
name = "cargo_desugar"
path = "src/bin/cargo-desugar/main.rs"

[[bin]]
name = "cargo_desugar_driver"
path = "src/bin/cargo-desugar-driver/main.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
rustc_version = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
indoc = "2"
libtest-mimic = "0.8"
regex = "1"
snapbox = "0.6"
strip-ansi-escapes = "0.2"
walkdir = "2.3.2"


[package.metadata.rust-analyzer]
rustc_private = true
