[package]
name = "cargo-desugar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-desugar"
path = "src/bin/cargo-desugar/main.rs"

[[bin]]
name = "cargo-desugar-driver"
path = "src/bin/cargo-desugar-driver/main.rs"

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

[[test]]
name = "rustc"
path = "tests/rustc.rs"
harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.14.0"
rustc_version = "0.4"
rust-via-desugarings = { path = ".." }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1"
indoc = "2"
libtest-mimic = "0.8"
regex = "1"
snapbox = "0.6"
strip-ansi-escapes = "0.2"
walkdir = "2.3.2"

[package.metadata.rust-analyzer]
rustc_private = true
